--- a/css/about.css
+++ b/css/about.css
@@ -6,13 +6,14 @@
 .inner-box > h2{
     font-weight: bold;
     font-size: 24px;
-    line-height: 30px;
+    line-height: 35px;
+    letter-spacing: 1.5px;
     color: #000000;
 }
 
 .inner-box > p{
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 25px;
     letter-spacing: 0.06em;
     color: rgba(0, 0, 0, 0.9);
 }
@@ -29,6 +30,7 @@ img {
 }
 .review {
     margin-top: 0;
+    margin-bottom: auto;
     font-size: 14px;
     color: rgba(0, 0, 0, 0.9);
     letter-spacing: 0.06em;
