--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,12 @@
+/* Style sheet created by: Group(Tanej, Karthik, Saichand, Umanga, Yuzan) */
+/*Styles specific to home page*/
+
+/*styles for button container*/
 .btm-container{
     display: flex;
 }
+
+/*styles for button*/
 .btm-container > button {
     height: 34px;
     padding: 0 10px;
@@ -17,11 +23,15 @@
     color: #FFFFFF;
 }
 
+
+/*styles for hover effect for button container*/
 .btm-container > button:hover {
     cursor: pointer;
     transform: scale(1.025);
 }
 
+
+/*styles for image*/
 .img-link > img {
     width: 32%;
     margin: auto;
@@ -29,6 +39,7 @@
 }
 
 
+/*styles for large screen*/
 @media screen and (max-width:880px) {
     .heading {
         font-size: 45px;
@@ -42,6 +53,8 @@
     }
 }
 
+
+/*styles for tablet*/
 @media only screen and (max-width:760px){
     .content-padding{
         padding: 3%;
@@ -51,6 +64,8 @@
     }
 }
 
+
+/*styles for mobile*/
 @media only screen and (max-width:660px){
     .heading {
         font-size: 35px;
@@ -60,6 +75,8 @@
     }
 }
 
+
+/*styles for button mobile*/
 @media only screen and (max-width:520px){
     .card {
         width: 100%;
